# FirstSFMLGame

./: .gitignore  CMakeLists.txt  README.md
src/: BlinkingText.cpp  BlinkingText.h  Enemy.cpp  Enemy.h  EnemyManager.cpp  EnemyManager.h  Game.cpp  Game.h  GameOverScene.cpp  GameOverScene.h  GameOverScreen.cpp  GameOverScreen.h  GameScene.cpp  GameScene.h  HPText.cpp  HPText.h  Heart.cpp  Heart.h  InvinsibilityPowerup.cpp  InvinsibilityPowerup.h  Player.cpp  Player.h  ResourceManager.h  Timer.cpp  Timer.h  main.cpp
src/Scenes/: GameOverScene.cpp  GameOverScene.h  GameScene.cpp  GameScene.h
